--- a/public/thedrinking.html
+++ b/public/thedrinking.html
@@ -33,6 +33,8 @@
                 I’m <a href="http://twitter.com/thegaw">Tyler</a>. I’m not always
                 my greatest ally. I like to give myself little reminders about life.
                 These are them.
+                <br>
+                <a href="http://twitter.com/againwiththis">@againwiththis</a>
             </p>
         </footer>
 
