--- a/public/loveyourself.html
+++ b/public/loveyourself.html
@@ -26,7 +26,8 @@
         </a>
         
 
-        <p class='sage-advice'>Love yourself some Brother.</p>
+        <p class="sage-advice">Love yourself some Brother.</p>
+
 
         
         <img class="reminder" src="/images/loveyourself.png" alt="">
