--- a/public/stopthinking.html
+++ b/public/stopthinking.html
@@ -26,7 +26,8 @@
         </a>
         
 
-        <p class='sage-advice'>Stop thinking about writing it and just write it already.</p>
+        <p class="sage-advice">Stop thinking about writing it and just write it already.</p>
+
 
         
         <img class="reminder" src="/images/stopthinking.png" alt="">
