--- a/public/thebouncer.html
+++ b/public/thebouncer.html
@@ -26,7 +26,8 @@
         </a>
         
 
-        <p class='sage-advice'>Stop giving the Bouncer the hairy eyeball.</p>
+        <p class="sage-advice">Stop giving the Bouncer the hairy eyeball.</p>
+
 
         
         <img class="reminder" src="/images/thebouncer.png" alt="">
