--- a/public/thedrinking.html
+++ b/public/thedrinking.html
@@ -22,7 +22,8 @@
         </a>
         
 
-        <p class='sage-advice'>The drinking. Knock it off.</p>
+        <p class="sage-advice">The drinking. Knock it off.</p>
+
 
         
         <img class="reminder" src="/images/thedrinking.png" alt="">
