--- a/public/voicemail.html
+++ b/public/voicemail.html
@@ -26,7 +26,8 @@
         </a>
         
 
-        <p class='sage-advice'>Voicemail is not something you need to be afraid of.</p>
+        <p class="sage-advice">Voicemail is not something you need to be afraid of.</p>
+
 
         
         <img class="reminder" src="/images/voicemail.png" alt="">
