--- a/public/wholepizza.html
+++ b/public/wholepizza.html
@@ -26,7 +26,8 @@
         </a>
         
 
-        <p class='sage-advice'>You don't need to eat the whole pizza.</p>
+        <p class="sage-advice">You don't need to eat the whole pizza.</p>
+
 
         
         <img class="reminder" src="/images/wholepizza.png" alt="">
