--- a/public/callmom.html
+++ b/public/callmom.html
@@ -26,7 +26,8 @@
         </a>
         
 
-        <p class='sage-advice'>It's been a damn month, call your mom.</p>
+        <p class="sage-advice">It's been a damn month, call your mom.</p>
+
 
         
         <img class="reminder" src="/images/callmom.png" alt="">
