--- a/public/donotleer.html
+++ b/public/donotleer.html
@@ -26,7 +26,8 @@
         </a>
         
 
-        <p class='sage-advice'>Do not leer at women.</p>
+        <p class="sage-advice">Do not leer at women.</p>
+
 
         
         <img class="reminder" src="/images/donotleer.png" alt="">
