--- a/public/somethingcool.html
+++ b/public/somethingcool.html
@@ -26,7 +26,8 @@
         </a>
         
 
-        <p class='sage-advice'>Make something cool today.</p>
+        <p class="sage-advice">Make something cool today.</p>
+
 
         
         <img class="reminder" src="/images/somethingcool.png" alt="">
